tests/NormalTests/paczka1/fuzzy1/62112844.err
Error in line 13: 6dBRfZ S23 48,7
Error in line 11: eLwPDu1C2l A851 55,5
Error in line 28: eLwPDu1C2l S23 82,7
Error in line 32: eLwPDu1C2l A286 P6,2
Error in line 36: 0Pt0MJ6 A691 63,4
Error in line 30: eLwPDu1C2l A286 21,2
